--- a/README
+++ b/README
@@ -1,8 +1,28 @@
-List and Query Physical Disk Properties on Windows NT based systes
+Utility to List and Query Physical Disk Properties on Microsoft Windows based systes.
 
-Example of how to list physical disks in Windows NT systems by querying NT Namespace for PhysicalDrive* objects
+Developer example of how to list physical disks in Windows NT systems by querying NT Namespace for PhysicalDrive* objects.
 
-Example of how to query physical disk for properties via IOCTL
+Developer example of how to query physical disk for properties via IOCTL.
 
-Copyright (c) 2016 by Antoni Sawicki
+Example output:
 
+PhysicalDrive0:
+  Vendor:    HP
+  Product:   LOGICAL VOLUME
+  Serial:
+  Removable: False
+  BusType:   RAID
+  Status:    Online
+  Size:      111.8 GB
+  HBTL:      0:0:4:0
+
+PhysicalDrive1:
+  Vendor:    ATA
+  Product:   SAMSUNG MZ7KM960
+  Serial:    S2NFNX0H400050B
+  Removable: False
+  BusType:   SAS
+  Status:    Online
+  Size:      894.3 GB
+  Trim:      Supported
+  HBTL:      1:2:1:1
