--- a/README
+++ b/README
@@ -4,6 +4,8 @@ Developer example of how to list physical disks in Windows NT systems by queryin
 
 Developer example of how to query physical disk for properties via IOCTL.
 
+Sysadmin utility to list system disks even in case VDS is not operating. Displays Disk GUIDs used by Microsoft Failover Cluster.
+
 Example output:
 
 PhysicalDrive0:
@@ -14,6 +16,8 @@ PhysicalDrive0:
   BusType:   RAID
   Status:    Online
   Size:      111.8 GB
+  Layout:    GPT
+  DiskID:    {8FAFB531-7334-4334-A64F-D61C90BF5060}
   HBTL:      0:0:4:0
 
 PhysicalDrive1:
@@ -24,5 +28,20 @@ PhysicalDrive1:
   BusType:   SAS
   Status:    Online
   Size:      894.3 GB
+  Layout:    GPT
+  DiskID:    {1A539AB6-76F8-470C-995F-105B314AF1B5}
   Trim:      Supported
   HBTL:      1:2:1:1
+
+PhysicalDrive2:
+  Vendor:    NVMe
+  Product:   Samsung SSD 950
+  Serial:    0000_0000_0000_0000.
+  Removable: False
+  BusType:   NVME
+  Status:    Online
+  Size:      476.9 GB
+  Layout:    GPT
+  DiskID:    {D0C45AEA-586A-4DF2-A657-6C8E3C0A487A}
+  Trim:      Supported
+  HBTL:      2:0:0:0
