--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Utility to List and Query Physical Disk Properties on Microsoft Windows based sy
 
 List disks even in case VDS is not operating. Displays Disk GUIDs used by Microsoft Failover Cluster.
 
-Developer example of how to list physical disks in Windows NT systems by querying NT Namespace for PhysicalDrive* objects. Developer example of how to query physical disk for properties via IOCTL.
+Developer example of how to list physical disks in Windows NT systems by querying NT Namespace for PhysicalDrive* objects and query physical disk for properties via IOCTL.
 
 
 Example output:
