--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 List and Query Physical Disk Properties on Microsoft Windows based systes.
 
-Displays vendor, product, bus type, serial number, disk GUIDs used by Microsoft Failover Cluster, BTL, trim support, etc. The utility will work even if VDS is frozen or stopped. 
+Displays vendor, product, bus type, serial number, disk GUIDs used by Microsoft Failover Cluster, BTL, trim support, etc. The utility will work even if VDS is hung or inoperable. 
 
 Developer example of how to list physical disks in Windows NT systems by querying NT Namespace for PhysicalDrive* objects and query physical disk for properties via IOCTL.
 
@@ -8,9 +8,9 @@ Developer example of how to list physical disks in Windows NT systems by queryin
 Example output:
 
 PhysicalDrive0:
-  Vendor:    HP
-  Product:   LOGICAL VOLUME
-  Serial:
+  Vendor   : HP
+  Product  : LOGICAL VOLUME
+  Serial   :
   Removable: False
   BusType  : RAID
   Status   : Online
